
Version 1.4.0
======================================================
Added:
	- Experimental display style : "Bar style"
	- TODO : New scan engine on Windows : faster and more accurate (up to 6 times faster).
	- "Drag & drop" capable (from Windows explorer)
Improved: 
	- Design refactored
Fixed:
	- Bug on "Text Density" : value loaded from a previous saved state was wrong.
	- Some minor bugs


Version 1.3.0
======================================================
Added:
	- New warning messages when scan errors occured.
	- New "image rotation" capability (you can rotate the graph as you want).
	- New "text density" setting (you can change the text density in real time).
	- New tooltip available when the mouse is hovered a directory.
	- Count the number of files in a directory (see the "Directory Details" form).
	- New commande line argument to set output image size.
Improved: 
	- Better resize mode (preview during resize, real redraw when resize finished)
	- Asynchronous draw for complicated graphs (which take a long time to draw), to avoid application freeze.
	- Main window state is memorized on exit (or the size if the window is not maximized).
	- Performance improvements
Fixed:
	- Bug 2505755 ("Wrong Image saved when run from CLI")
	- Some minor bugs


Version 1.2.0
======================================================
Added:
	- Root folder can include disk free spaces
	- Root folder always contain an 'unknown files' parts, which represents the files that can not be scanned (due to acces restrictions for exemple) and lost space.
	- Multiple color styles (random or linear colors)
	- New "Details" window, including the full list of current subfolders
	- Command line support (see help for details) for scripting use
	- New toolbar containing analyse shortcuts with computer's drives
	- New wait form when you delete a folder
	- Cursor appearance change on hovered folders
Improved: 
	- Graph export available in PNG format.