@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.3074
+//     Runtime Version:2.0.50727.4016
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -214,7 +214,7 @@ namespace HDGraph.Resources {
         }
         
         /// <summary>
-        ///   Looks up a localized string similar to An error occured while deleting folder. Some files were not deleted. Error detail : {0}.
+        ///   Looks up a localized string similar to An error occured while deleting the folder. Some files were not deleted. You probably don&apos;t have the right permissions on the folder or its files, or one file might be read only. {1}Error detail : {0}{1}{1}Do you want to open the folder to investigate the problem or delete the folder manually ?.
         /// </summary>
         internal static string ErrorDeletingFolder {
             get {
